feat: add registeredmodel resource and authentication
